@@ -1,3 +1,9 @@
+2017-02-01  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	PR target/70012
+	* gcc.dg/vect/costmodel/ppc/costmodel-vect-33.c: Adjust test
+	conditions.
+
 2017-02-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR testsuite/79324
